--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: center;
   padding: 5px 3px;
+  position: fixed;
+  width: 100%;
+  top: 0px;
 }
 .status-bar__column {
   width: 33%;
