--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -32,4 +32,13 @@
 }
 .nav__ellipsis--notif {
   background-color: tomato;
+  display: flex;
+  width: 6px;
+  height: 6px;
+  border-radius: 3px;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 30px;
+  bottom: 30px;
 }
