--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,3 +1,7 @@
+.user-component {
+  justify-content: space-between;
+}
+
 .user-component,
 .user-component__column:first-child {
   display: flex;
@@ -16,7 +20,7 @@
 .user-component__avatar--sm {
   width: 60px;
   height: 60px;
-  border-radius: 205x;
+  border-radius: 25px;
 }
 
 .user-component__title {
@@ -30,4 +34,15 @@
 }
 .user-component__title--not-bolt {
   font-weight: 400;
+}
+
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.user-component__time {
+  margin-bottom: 10px;
+  display: block;
 }
