--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -35,3 +35,70 @@
   top: 47px;
   right: 20px;
 }
+.open-chat__header {
+  display: flex;
+  justify-content: space-between;
+  color: var(--defalt-gray);
+  margin-bottom: 25px;
+}
+.open-chat__header span {
+  opacity: 0.6;
+}
+.open-post {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.open-post__title {
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 7px;
+}
+.open-post__hashtags {
+  text-transform: uppercase;
+  color: var(--defalt-gray);
+  margin-bottom: 7px;
+}
+.open-post__members img {
+  width: 25px;
+  height: 25px;
+  border-radius: 15px;
+  margin-right: 5px;
+}
+.open-post__members {
+  display: flex;
+  align-items: center;
+}
+.open-post__member-count {
+  color: var(--defalt-gray);
+}
+.open-post__members .divider {
+  width: 1px;
+  height: 15px;
+  background-color: rgba(0, 0, 0, 0.2);
+  margin: 0px 5px;
+}
+.open-post__member-status {
+  color: #ff74c7;
+}
+.open-post__photo {
+  position: relative;
+}
+.open-post__photo img {
+  width: 120px;
+  height: 120px;
+  border-radius: 8px;
+}
+.open-post__heart-count {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 50px;
+  color: white;
+  padding: 6px;
+  border-radius: 15px;
+  position: absolute;
+  bottom: 10px;
+  right: 7px;
+}
+.open-post__heart-count span {
+  margin-left: 3px;
+}
