chat-screen with no input

--- a/css/components/alt-screen-header.css
+++ b/css/components/alt-screen-header.css
@@ -5,6 +5,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  top: 0px;
+}
+.alt-header,
+#chat-screen .status-bar {
+  background-color: #abc1d1;
+}
+#chat-screen .status-bar {
+  z-index: 2;
+}
+#chat-screen .alt-header {
+  z-index: 1;
+}
+.alt-header__column {
+  width: 33%;
 }
 .alt-header__title {
   font-size: 28px;
@@ -13,6 +27,14 @@
 .alt-header__column:first-child {
   margin-right: auto;
 }
+.alt-header__column:nth-child(2) {
+  text-align: center;
+}
 .alt-header__column:last-child {
   margin-left: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+.alt-header__column span:last-child {
+  margin-left: 20px;
 }
