--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -13,8 +13,7 @@
   margin-right: 5px;
 }
 .status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
 .status-bar__column:last-child {
   display: flex;
